--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -6,7 +6,7 @@ dependencies:
   - python >=3.7,<3.8.0a0
   - jupyterlab >=2.2,<3.0.0a0
   - notebook >=4.3.1
-  - nodejs
+  - nodejs >=14.9.0
   - pip
   - python-language-server
   - ujson <=1.35
