--- a/binder/environment.yml
+++ b/binder/environment.yml
@@ -8,7 +8,7 @@ dependencies:
   - notebook >=4.3.1
   - nodejs >=14.9.0
   - pip
-  - python-language-server
+  - python-lsp-server
   - ujson <=1.35
   - ruamel_yaml
   - pip:
